# merge_obs_algorithm

./: CMakeLists.txt  README.md  package.xml
examples/: example.cpp
include/: ColorInfo.hpp  GeneratePointCloud.hpp  box_merge.hpp  generate_point_cloud.hpp  octomap.hpp
src/: GeneratePointCloud.cpp  generate_point_cloud.cpp  octomap.cpp
