<?xml version="1.0"?>
<package format="2">
  <name>merge_obs_algorithm</name>
  <version>0.0.0</version>
  <description>The settings package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>

  <depend>roslib</depend>


</package>
